--- a/src/app/common/welcome/welcome.component.css
+++ b/src/app/common/welcome/welcome.component.css
@@ -1,9 +1,9 @@
-h1, h2 {
+h1, h2, p {
     display: flex;
     justify-content: center;
     margin-top: 5vh;
     text-align: center;
-    font-size: 6vw;
+    font-size: 3vw;
     line-height: 1.2;
 }
 
@@ -21,6 +21,9 @@ h1, h2 {
     h2 {
         font-size: 5.5vw;
     }
+    p {
+        font-size: 5vw;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -29,6 +32,9 @@ h1, h2 {
     }
     h2 {
         font-size: 7vw;
+    }
+    p {
+        font-size: 6vw;
     }
     .button-container {
         margin-top: 4vh;
@@ -42,6 +48,9 @@ h1, h2 {
     h2 {
         font-size: 7vw;
     }
+    p {
+        font-size: 6vw;
+    }
     .button-container {
         margin-top: 4vh;
     }
@@ -51,6 +60,9 @@ h1, h2 {
     h1, h2 {
         font-size: 12vw;
     }
+    p {
+        font-size: 10vw;
+    }
 }
 
 @media screen and (max-width: 400px) {
@@ -59,6 +71,9 @@ h1, h2 {
     }
     h2 {
         font-size: 9vw;
+    }
+    p {
+        font-size: 8vw;
     }
     .button-container {
         margin-top: 3vh;
