--- a/src/app/user/cart/cart.component.html
+++ b/src/app/user/cart/cart.component.html
@@ -17,33 +17,34 @@
                             <img [src]="item.imageURL" alt="{{ item.productName }}" class="cart-item-image" />
                         </mat-cell>
                     </ng-container>
-        
+
                     <!-- Name Column -->
                     <ng-container matColumnDef="productname">
                         <mat-header-cell *matHeaderCellDef> Product Name </mat-header-cell>
                         <mat-cell *matCellDef="let item"> {{ item.productName }} </mat-cell>
                     </ng-container>
-        
+
                     <!-- Quantity Column -->
                     <ng-container matColumnDef="quantity">
                         <mat-header-cell *matHeaderCellDef> Quantity </mat-header-cell>
                         <mat-cell *matCellDef="let item"> {{ item.quantity }} </mat-cell>
                     </ng-container>
-        
+
                     <!-- Price Column -->
                     <ng-container matColumnDef="price">
                         <mat-header-cell *matHeaderCellDef> Price </mat-header-cell>
                         <mat-cell *matCellDef="let item"> {{ item.price.toFixed(2) | currency: 'INR' }} </mat-cell>
                     </ng-container>
-        
+
                     <!-- Actions Column -->
                     <ng-container matColumnDef="actions">
                         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                         <mat-cell *matCellDef="let item">
-                            <button mat-button color="warn" (click)="removeFromCart(item.cartID, item.productID)"><mat-icon>delete</mat-icon></button>
+                            <button mat-button color="warn"
+                                (click)="removeFromCart(item.cartID, item.productID)"><mat-icon>delete</mat-icon></button>
                         </mat-cell>
                     </ng-container>
-        
+
                     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
                 </mat-table>
@@ -69,9 +70,16 @@
             <span>Final Amount:</span>
             <span>{{ finalAmount.toFixed(2) | currency: 'INR' }}</span>
         </div>
-        <button *ngIf="cartItems.length > 0" mat-raised-button color="primary" class="proceed-button" (click)="proceedToOrder()">
-            <mat-icon>payment</mat-icon>
-            Proceed to Checkout
-        </button>
+        <div class="buttons">
+            <button *ngIf="cartItems.length > 0" mat-raised-button color="primary" class="proceed-button"
+                (click)="proceedToOrder()">
+                <mat-icon>payment</mat-icon>
+                Proceed to Checkout
+            </button>
+            <button *ngIf="cartItems.length > 0" mat-stroked-button color="accent" class="proceed-button" (click)="openCouponDialog()">
+                <mat-icon>card_giftcard</mat-icon>
+                Apply Coupon
+            </button>
+        </div>
     </div>
 </div>
